remove hard-coded master